Added support to check for ssh sessions in the prompt

--- a/misc_scripts/zsh/starship.toml
+++ b/misc_scripts/zsh/starship.toml
@@ -4,6 +4,7 @@ format = """
 [](red)\
 $os\
 $username\
+$hostname\
 [](bg:peach fg:red)\
 $directory\
 [](bg:yellow fg:peach)\
@@ -29,6 +30,11 @@ $line_break\
 $character"""
 
 palette = 'catppuccin_mocha'
+
+[hostname]
+ssh_only = true
+style = "bg:red fg:crust"
+format = '[@$hostname]($style)'
 
 [os]
 disabled = false
